--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(230, 238, 246);
 }
+.instructions h2 {
+  text-align: center;
+  background: #121fcf;
+  background: linear-gradient(to right, #121fcf 0%, #29c4cf 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-transform: capitalize;
+  margin-bottom: 1em;
+}
+.instructions h4 {
+  margin: 0.3em 0;
+}
