--- a/src/components/Tweet-styles/styleOne/styleOne.css
+++ b/src/components/Tweet-styles/styleOne/styleOne.css
@@ -5,7 +5,7 @@
 .style--one article {
   margin: 3rem 1em;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  max-width: 400px;
+  max-width: 350px;
   padding: 1em;
   /* border-radius: 5px; */
 }
@@ -44,4 +44,7 @@
 }
 .download--btn:hover {
   color: black;
+}
+.user--image {
+  border-radius: 50%;
 }
