--- a/src/components/Tweet-styles/styleOne/styleOne.css
+++ b/src/components/Tweet-styles/styleOne/styleOne.css
@@ -5,7 +5,8 @@
 .style--one article {
   margin: 3rem 1em;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  max-width: 350px;
+  min-width: 300px;
+  max-height: 400px;
   padding: 1em;
   /* border-radius: 5px; */
 }
@@ -19,7 +20,7 @@
 .content--image img {
   margin: 1em 0;
   width: 100%;
-  height: 250px;
+  height: 200px;
   object-fit: contain;
   display: block;
 }
