--- a/src/components/Tweet-styles/styleOne/styleOne.css
+++ b/src/components/Tweet-styles/styleOne/styleOne.css
@@ -9,6 +9,7 @@
   max-height: 400px;
   padding: 1em;
   /* border-radius: 5px; */
+  font-size: 0.8rem;
 }
 .style--one--header {
   display: flex;
