--- a/src/components/Tweet-styles/styleOne/styleOne.css
+++ b/src/components/Tweet-styles/styleOne/styleOne.css
@@ -6,6 +6,7 @@
   margin: 3rem 1em;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   min-width: 300px;
+  max-width: 400px;
   padding: 1em;
   /* border-radius: 5px; */
   font-size: 0.7rem;
