--- a/src/components/Tweet-styles/styleOne/styleOne.css
+++ b/src/components/Tweet-styles/styleOne/styleOne.css
@@ -6,7 +6,7 @@
   margin: 3rem 1em;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   min-width: 300px;
-  max-width: 400px;
+  max-width: 300px;
   padding: 1em;
   /* border-radius: 5px; */
   font-size: 0.7rem;
@@ -21,8 +21,9 @@
 .content--image img {
   margin: 1em 0;
   width: 100%;
-  height: 200px;
-  object-fit: contain;
+  height: 100%;
+  max-height: 300px;
+  object-fit: cover;
   display: block;
 }
 
